added steps for registration(commonPassStep1, checkCommonPassStep2, selectDepartmentStep3)